--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "burdy",
-  "version": "2.1.4",
+  "version": "2.2",
   "description": "Open Source Headless Platform",
   "main": "index.js",
   "scripts": {
@@ -36,6 +36,7 @@
   ],
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.515.0",
     "@babel/core": "^7.16.12",
     "@babel/plugin-proposal-decorators": "^7.16.7",
     "@babel/plugin-transform-runtime": "^7.16.10",
@@ -43,7 +44,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@fluentui/font-icons-mdl2": "^8.1.20",
-    "@fluentui/react": "~8.51.1",
+    "@fluentui/react": "^8.115.6",
     "@fluentui/react-experiments": "^8.4.23",
     "@fluentui/react-file-type-icons": "^8.5.8",
     "@fluentui/react-hooks": "^8.3.9",
@@ -54,14 +55,13 @@
     "archiver": "^5.3.0",
     "async": "^3.2.3",
     "async-mutex": "^0.3.2",
-    "aws-sdk": "^2.1064.0",
     "axios": "^0.25.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^7.5.0",
-    "camelcase": "^6.3.0",
+    "camelcase": "^8.0.0",
     "chalk": "^4.1.2",
     "classnames": "^2.3.1",
     "commander": "^8.3.0",
@@ -87,10 +87,10 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.5.3",
-    "multer": "^1.4.4",
-    "multer-s3": "^2.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3",
-    "nanoid": "^3.2.0",
+    "nanoid": "^5.0.5",
     "node-notifier": "^10.0.0",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
@@ -103,6 +103,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.5.1",
+    "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.25.1",
     "react-refresh": "^0.11.0",
     "react-router": "^5.2.1",
@@ -117,7 +118,7 @@
     "unzipper": "^0.10.11",
     "url-loader": "^4.1.1",
     "use-debounce": "^7.0.1",
-    "uuid": "^8.3.2",
+    "uuid": "^9.0.1",
     "webpack": "^5.67.0",
     "webpack-dev-middleware": "^5.3.0",
     "webpack-hot-middleware": "^2.25.1",
@@ -131,7 +132,6 @@
   "devDependencies": {
     "@types/archiver": "^5.3.1",
     "@types/async": "^3.2.12",
-    "@types/aws-sdk": "^2.7.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/copyfiles": "^2.4.1",
@@ -178,7 +178,7 @@
   "peerDependencies": {
     "path-to-regexp": "^6.2.0"
   },
-  "node": ">=12.x.x <=16.x.x",
+  "node": ">=12.x.x <=18.x.x",
   "npm": ">=6.0.0",
   "keywords": [
     "burdy",
